--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -65,8 +65,10 @@ button:hover {
 
 .topo {
     width: 100%;
+    height: 28px; 
+    position: relative;
     background-color: #f8f8f8;
-    position: absolute;
+    /* position: absolute; */
     padding: 20px 0px 10px 0px;
 }
 
